# fastfeedforward

./: README.md  changelog.md  pyproject.toml  setup.cfg  test.py
fastfeedforward/: __init__.py  fff.py
fastfeedforward/optim/: __init__.py  local_adam.py  local_sgd.py
notebook/: example.ipynb
src/: test.py
