[metadata]
name = fastfeedforward
version = 0.1.0
author = Peter Belcak
author_email = belcak@ethz.ch
description = A library for the implementation of O(log(w)) feedforward networks, following the paper "Fast Feedforward Networks"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pbelcak/fastfeedforward
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
[options]
packages = find:
python_requires = >=3.9
include_package_data = True