[metadata]
name = fastfeedforward
version = 0.2.0
author = Peter Belcak
author_email = belcak@ethz.ch
description = A library for the implementation of `O(log(w))` feedforward networks, following the paper "Fast Feedforward Networks"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pbelcak/fastfeedforward
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence
[options]
packages = find:
python_requires = >=3.9
install_requires =
    torch>=1.8.0
include_package_data = True